src/components/book.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Slab&display=swap');

.card {
  margin-left: 1.5rem;
  margin-right: 1.5rem;
  font-family: "Montserrat", serif;
}

.cardlist {
  background-color: white;
  display: flex;
  flex-direction: column;
  margin-top: 3rem;
  padding: 1rem;
}

.columns {
  display: flex;
  justify-content: space-between;
}

.col1 {
  width: 20rem;
}

.col2 {
  width: 20rem;
  display: flex;
  gap: 1rem;
  align-items: center;
  justify-content: flex-end;
}

.col3 {
  width: 20rem;
  display: flex;
  flex-direction: column;
  gap: 5px;
  margin-top: 1rem;
}

h1 {
  font-size: 19px;
}

.i {
  color: #0290ff;
}

.comment {
  display: flex;
  gap: 1rem;
  font-family: "Roboto Slab", serif;
}

.category {
  color: #9c9c9c;
}

#author {
  font-family: "Roboto Slab", serif;
}

.chapter {
  font-family: "Roboto Slab", serif;
  color: #9c9c9c;
}

.completed {
  color: #9c9c9c;
}

.border {
  border: 1px solid #9c9c9c;
  height: 1.5rem;
  margin-top: 1.28rem;
  color: #9c9c9c;
}

.progress {
  width: 5rem;
  height: 5rem;
  position: relative;
}

.outer-circle {
  height: 80px;
  width: 80px;
  border-radius: 50%;
  border: 1px solid rgb(172, 168, 168);
  padding: 7px;
}

.inner-circle {
  height: 65px;
  width: 65px;
  border-radius: 50%;
  border: 1px solid rgb(179, 175, 175);
}

.percentage {
  display: flex;
  flex-direction: column;
  gap: 0.4rem;
}

.Percent {
  font-size: 2.2rem;
}

button {
  background-color: #0290ff;
  outline: none;
  border: none;
  width: 10rem;
  padding: 0.5rem;
  font-family: "Roboto Slab", serif;
  margin-top: 1rem;
  border-radius: 5px;
  color: white;
}

.border2 {
  border: 1px solid #9c9c9c;
  height: 5.5rem;
  margin-top: 1.28rem;
  color: #9c9c9c;
}

form {
  display: flex;
  flex-direction: column;
  margin: 0 1.5rem 10rem;
}

label {
  font-size: 2rem;
  color: rgb(101, 100, 100);
}

.formelements {
  display: flex;
  gap: 1rem;
  align-items: center;
  margin-top: 1rem;
}

input {
  width: 25rem;
  height: 2rem;
  padding: 5px;
  outline: none;
}

form button {
  padding: 0.5rem;
  display: flex;
  text-align: center;
  justify-content: center;
  align-items: center;
  margin-top: 0;
}

#btn {
  background-color: white;
}

